--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <section id="biografie" class="fade-in">
   <h2>Biografie</h2>
-  <img src="imagini/main.webp" alt="Jador">
+  <img src="main.webp" alt="Jador">
   <p>Jador, pe numele său real Remus Ionuț Dumitrache, s-a născut în 1995 și este una dintre cele mai influente figuri ale muzicii moderne românești. Cariera sa a început odată cu aparițiile TV, dar adevăratul succes a venit cu muzica.</p>
   <p>Stilul său unic îmbină manele, trap și influențe balcanice. Jador transmite emoții puternice, atât prin versuri, cât și prin prezența sa scenică. Este adesea în topuri YouTube, cu milioane de vizualizări.</p>
 </section>
@@ -33,16 +33,16 @@
   <p>Mai jos poți accesa câteva dintre cele mai cunoscute piese ale lui Jador. Fiecare thumbnail te trimite direct pe YouTube:</p>
   <div class="thumbs">
     <a href="https://www.youtube.com/watch?v=U2Udq8JcCA8&list=PLxqsXjXWttc8JbvROJ574IHYBUSxJimOa&index=1" target="_blank">
-      <img src="imagini/jador1.jpg" alt="Dau Moda">
+      <img src="jador1.jpg" alt="Dau Moda">
     </a>
     <a href="https://www.youtube.com/watch?v=tC5sR8HIRr8&list=PLxqsXjXWttc8JbvROJ574IHYBUSxJimOa&index=3" target="_blank">
-      <img src="imagini/jador2.jpg" alt="Formidabilă">
+      <img src="jador2.jpg" alt="Formidabilă">
     </a>
     <a href="https://www.youtube.com/watch?v=bR5ioi1oJ1I&list=PLxqsXjXWttc8JbvROJ574IHYBUSxJimOa&index=5" target="_blank">
-      <img src="imagini/jador3.jpg" alt="Am Ceva Pe Buză">
+      <img src="jador3.jpg" alt="Am Ceva Pe Buză">
     </a>
     <a href="https://www.youtube.com/watch?v=1bzFsZ76JFY&list=PLxqsXjXWttc8JbvROJ574IHYBUSxJimOa&index=2" target="_blank">
-      <img src="imagini/jador4.jpg" alt="Bijuterie">
+      <img src="jador4.jpg" alt="Bijuterie">
     </a>
   </div>
 </section>
@@ -80,7 +80,7 @@
   <div class="track">
     <p>🎵 Jador & Camelia Dumitrache - Pasiunea Pentru Tine</p>
     <audio controls>
-      <source src="audio/Jador & Camelia Dumitrache - Pasiunea Pentru Tine (Oficial Video).mp3" type="audio/mpeg">
+      <source src="Jador & Camelia Dumitrache - Pasiunea Pentru Tine (Oficial Video).mp3" type="audio/mpeg">
       Browserul tău nu suportă audio HTML5.
     </audio>
   </div>
@@ -88,14 +88,14 @@
   <div class="track">
     <p>🎵 Jador  @VladutaLupau - Amanta </p>
     <audio controls>
-      <source src="audio/Jador  @VladutaLupau - Amanta  Official Video.mp3" type="audio/mpeg">
+      <source src="Jador  @VladutaLupau - Amanta  Official Video.mp3" type="audio/mpeg">
     </audio>
   </div>
 
   <div class="track">
     <p>🎵 Jador - Aseara Dansai Singura</p>
     <audio controls>
-      <source src="audio/Jador - Aseara Dansai Singura  Official Video.mp3" type="audio/mpeg">
+      <source src="Jador - Aseara Dansai Singura  Official Video.mp3" type="audio/mpeg">
     </audio>
   </div>
 </section>
